--- a/src/views/sample.ejs
+++ b/src/views/sample.ejs
@@ -7,5 +7,7 @@
     </head>
     <body>
         <h1>Hello world with ejs</h1>
+        <h2>Welcome!</h2>
+        <h3>International</h3>
     </body>
 </html>
